K8s/Kustomize/base/rabbitmq/rabbit-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 4
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8-management
          ports:
            - containerPort: 15672
              name: management
            - containerPort: 5672
              name: rabbitmq
          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq
              readOnly: false
            - name: config-file
              mountPath: /config/
            - name: plugins-file
              mountPath: /etc/rabbitmq/
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
      volumes:
        - name: config-file
          emptyDir: {}
        - name: plugins-file
          emptyDir: {}
        - name: config
          configMap:
            name: rabbitmq-config
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 50Mi
# Notes:
# Minikube already comes with a standard StorageClass — so we do not need to define it manually.
# We do not need to create a PVC manually when using volumeClaimTemplates in a StatefulSet.
# why? The StatefulSet automatically creates a unique PVC for each Pod based on the volumeClaimTemplates specification.

#------------------For Prometheus----------------------
# From sock shop
#   - name: rabbitmq-exporter
#     image: kbudde/rabbitmq-exporter
#    ports:
#   - containerPort: 9090
#  name: exporter
#-----------------------------------------------------

# annotations:
#     prometheus.io/scrape: "false"

# Tutorial: https://www.youtube.com/watch?v=_lpDfMkxccc&t=206s
