K8s/Kustomize/base/rabbitmq/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  # annotations:
  #       prometheus.io/scrape: 'true'
  #       prometheus.io/port: '9090'
spec:
  clusterIP: None 
  ports: #----------------------------
    - protocol: TCP
    - port: 5672
      name: rabbitmq
      targetPort: 5672

    - protocol: TCP
    - port: 15672
      name: management
      targetPort: 15672

    #----Prometheus-----------------
    # - port: 9090
    #   name: exporter
    #   targetPort: exporter
    #-------------------------------

  selector:
    app.kubernetes.io/name: rabbitmq
